[refactor] Java Endorsed dir hasn't been a thing for sometime and is unsupported in Java 9